Fix non-sticky navbar bug and add z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,8 @@ div.row, section.row {
 
 .nav-main {
     position:sticky;
+    top: 0;
+    z-index: 1;
     text-align: center;
     align-items: center;
     background-color: #4B4453;
